--- a/style.css
+++ b/style.css
@@ -32,6 +32,11 @@ body {
     text-shadow: 1px 1px 1px #222, 0 1px 1px #222, 1px 0 1px #222, 1px 1px 1px #222, 0 1px 1px #222, 1px 0 1px #222;
 }
 
+.side {
+    background-color: #424242;
+    padding: 1px;
+}
+
 .side .redditname a {
     color: black;
 }
@@ -87,10 +92,18 @@ body {
     margin-bottom: 1px;
 }
 
+#preview_comment li {
+    color: #D3D3D3
+}
+
 #preview_comment_gilded {
     border: 1px solid #FF6200;
     margin-top: 1px;
     margin-bottom: 1px;
+}
+
+#preview_comment_gilded li {
+    color: #D3D3D3
 }
 
 .title.may-blank.loggedin {
@@ -105,6 +118,10 @@ body {
     color: #D3D3D3;
 }
 
+.midcol {
+    display: none;
+}
+
 .midcol.likes {
     display: none;
 }
@@ -115,4 +132,62 @@ body {
 
 .md p {
     color: #D3D3D3
+}
+
+.md a {
+    color: #20A4F3;
+}
+
+.leavemoderator {
+    background-color: #424242;
+    color: #D3D3D3;
+}
+
+.leavemoderator a {
+    color: #20A4F3
+}
+
+.titlebox strong {
+    color: #FFBC0F;
+}
+
+form.toggle.flairtoggle {
+    background-color: #424242
+}
+
+form.toggle.flairtoggle label {
+    color: #D3D3D3;
+}
+
+.icon-menu a {
+    background-color: #424242;
+    color: #20A4F3;
+}
+
+.tagline a {
+    color: #20A4F3;
+}
+
+.bottom a {
+    color: #20A4F3;
+}
+
+.bottom {
+    color: #D3D3D3;
+}
+
+.sidecontentbox .title h1 {
+    color: #FF4CAA;
+}
+
+.sidecontentbox a {
+    color: #20A4F3;
+}
+
+.sidecontentbox .content li a {
+    color: #20A4F3;
+}
+
+.account-activity-box a {
+    color: #20A4F3;
 }
