--- a/style_old.css
+++ b/style_old.css
@@ -23,7 +23,7 @@ body {
 }
 
 
-/* header
+/* header */
 
 #header {
     background-color: black;
@@ -107,296 +107,6 @@ body {
 
 /* end of header */
 
-
-/** START **/
-
-
-/** Start of cyberpunk #header **/
-
-#header {
-    height: 220px;
-    background: url(%%Banner%%) no-repeat, #000;
-    border-bottom: none;
-    box-shadow: inset 0px -200px 2px -200px #000
-}
-
-#header-img {
-    position: relative;
-    top: 110px;
-    left: 20px;
-    transform: translateY(-50%);
-    margin: 0
-}
-
-#header .tabmenu {
-    position: absolute;
-    top: 180px;
-    left: 50%;
-    transform: translateX(-50%)
-}
-
-#header .tabmenu li {
-    margin: 0 5px 0 0
-}
-
-#header .tabmenu li a {
-    padding: 5px 10px 4px 10px;
-    background-color: rgba(20, 15, 15, 0.25);
-    border: 1px solid;
-    color: #b8d9d1;
-    text-transform: uppercase;
-    font-size: 12px;
-    transition: color 0.25s
-}
-
-#header .tabmenu li a:hover {
-    color: #cef2e9
-}
-
-#header .tabmenu li.selected a {
-    border: 1px solid;
-    color: #e5004d
-}
-
-#header .tabmenu li.selected a:hover {
-    color: #f05
-}
-
-body:not(.comments-page)#header .tabmenu li:nth-of-type(4) {
-    display: none
-}
-
-html .res-navTop #header-bottom-right,
-#header-bottom-right {
-    top: 55px;
-    bottom: inherit;
-    right: 20px;
-    padding: 0;
-    background-color: transparent;
-    border: none;
-    border-radius: 0
-}
-
-#header-bottom-right a {
-    color: #b8d9d1;
-    text-transform: uppercase
-}
-
-#header-bottom-right .separator {
-    display: none
-}
-
-
-/** END **/
-
-
-/** START **/
-
-
-/** Start of cyberpunk #header-bottom-right **/
-
-html .res-navTop #header-bottom-right,
-#header-bottom-right {
-    top: 55px;
-    bottom: inherit;
-    right: 20px;
-    padding: 0;
-    background-color: transparent;
-    border: none;
-    border-radius: 0
-}
-
-#header-bottom-right a {
-    color: #b8d9d1;
-    text-transform: uppercase
-}
-
-#header-bottom-right .separator {
-    display: none
-}
-
-
-/** **/
-
-
-/** START **/
-
-
-/** Start of cyberpunk .sr-header **/
-
-.sr-bar a,
-.sr-bar a.gold {
-    color: #b8d9d1;
-    font-weight: bold
-}
-
-.sr-bar a:hover {
-    color: #cef2e9;
-    text-decoration: none
-}
-
-#sr-header-area .sr-list {
-    width: calc(100% - 150px)
-}
-
-#sr-more-link {
-    padding: 0 10px;
-    background-color: transparent;
-    color: #e5004d;
-    transition: color 0.25s
-}
-
-#sr-more-link:hover {
-    color: #f05;
-    text-decoration: none
-}
-
-.sr-bar .separator {
-    margin: 0 6px 0
-}
-
-
-/** END **/
-
-
-/** START **/
-
-
-/** start of cyberpunk #chat id **/
-
-#chat:not(.active):before,
-#chat:not(.active):after,
-#chat.active:before,
-#chat.active:after {
-    width: 21px;
-}
-
-#chat:not(.active):before {
-    background-position: -25px 0
-}
-
-#chat:not(.active):after {
-    background-position: -25px -17px
-}
-
-#chat.active:before {
-    background-position: -25px -33px
-}
-
-#chat.active:after {
-    background-position: -25px 50px
-}
-
-
-/** END **/
-
-
-/** START **/
-
-
-/** .logout from cyberpunk **/
-
-.logout a:before,
-.logout a:after {
-    width: 12px;
-}
-
-.logout a:before {
-    background-position: 0 -67px
-}
-
-.logout a:after {
-    background-position: 0 -84px
-}
-
-
-/** END **/
-
-
-/** START **/
-
-
-/** .user from cyberpunk **/
-
-.user {
-    position: absolute;
-    top: 106px;
-    right: -2px;
-    padding: 0;
-    white-space: nowrap;
-    color: #b8d9d1!important;
-    font-size: 0;
-    font-weight: bold;
-    transition: color 1s
-}
-
-.user a,
-html:not(.res) .user .userkarma {
-    color: #b8d9d1!important;
-    font-size: 12px;
-    transition: color 1s
-}
-
-.user:hover,
-.user:hover a,
-.user:hover .userkarma {
-    color: #cef2e9!important
-}
-
-.user>a {
-    margin: 0!important
-}
-
-.user .userkarma {
-    float: left
-}
-
-html:not(.res) .user .userkarma,
-.res .user .userkarma a {
-    margin-right: 5px
-}
-
-.user>a:before {
-    display: block;
-    content: "";
-    position: absolute;
-    top: 14px;
-    right: 0;
-    height: 30px;
-    width: 300px;
-    background: url("%%barcode%%") top left / 300px no-repeat
-}
-
-.user>a:after {
-    display: block;
-    content: "";
-    position: absolute;
-    top: 14px;
-    right: 0;
-    height: 30px;
-    width: 300px;
-    background: url("%%barcode%%") 0 -31px / 300px no-repeat;
-    opacity: 0;
-    transition: opacity 1s
-}
-
-.user:hover>a:after {
-    opacity: 1
-}
-
-html .user #RESAccountSwitcherIcon {
-    display: block;
-    position: absolute;
-    top: 30px;
-    right: 305px;
-    height: 11px;
-    width: 11px;
-    background: none
-}
-
-
-/** END **/
-
 .side {
     background-color: #424242;
     padding: 1px;
@@ -416,7 +126,7 @@ h1.hover.redditname {
 }
 
 
-/** #preview
+/** #preview **/
 
 #preview_link_normal {
     border: 1px solid #5815E8;
@@ -498,15 +208,6 @@ h1.hover.redditname {
 
 
 /* end of #preview */
-
-
-/** START **/
-
-
-/** cyberpunk **/
-
-
-/** END **/
 
 .title.may-blank.loggedin {
     color: #20A4F3;
@@ -669,242 +370,7 @@ span.separator {
 }
 
 
-/** START **/
-
-
-/** mail stuff from cyberpunk **/
-
-#mail,
-#mail.nohavemail,
-#mail.havemail,
-#chat:not(.active),
-#chat.active,
-#modmail,
-#modmail.nohavemail,
-#modmail.havemail,
-#new_modmail,
-#new_modmail.nohavemail,
-#new_modmail.havemail,
-.pref-lang,
-#header .gearIcon,
-.logout a {
-    display: inline-block;
-    position: relative;
-    top: 0;
-    vertical-align: top;
-    height: 35px;
-    width: auto;
-    margin: 0 0 0 10px;
-    padding: 9px 10px 10px;
-    background: rgba(0, 0, 0, 0.25);
-    border: 1px solid #b8d9d1;
-    font-size: 0;
-    transition: border 0.25s
-}
-
-#mail.nohavemail:hover,
-#chat:not(.active):hover,
-#modmail.nohavemail:hover,
-#new_modmail.nohavemail:hover,
-.pref-lang:hover,
-#header .gearIcon:hover,
-.logout a:hover {
-    border-color: #cef2e9
-}
-
-#mail.havemail,
-#chat.active,
-#modmail.havemail,
-#new_modmail.havemail {
-    border-color: #e5004d
-}
-
-#mail.havemail:hover,
-#chat.active:hover,
-#modmail.havemail:hover,
-#new_modmail.havemail:hover {
-    border-color: #f05
-}
-
-#mail.nohavemail:before,
-#mail.havemail:before,
-#chat:not(.active):before,
-#chat.active:before,
-#modmail.nohavemail:before,
-#modmail.havemail:before,
-#new_modmail.nohavemail:before,
-#new_modmail.havemail:before,
-.pref-lang:before,
-#header .gearIcon:before,
-.logout a:before {
-    content: "";
-    display: block;
-    height: 16px;
-    background: url(%%icon%%) top left / 92px
-}
-
-#mail.nohavemail:after,
-#mail.havemail:after,
-#chat:not(.active):after,
-#chat.active:after,
-#modmail.nohavemail:after,
-#modmail.havemail:after,
-#new_modmail.nohavemail:after,
-#new_modmail.havemail:after,
-.pref-lang:after,
-#header .gearIcon:after,
-.logout a:after {
-    content: "";
-    display: inline-block;
-    position: absolute;
-    height: 16px;
-    margin: -16px 0 0 0;
-    background: url(%%icon%%) top left / 92px;
-    opacity: 0;
-    transition: opacity 0.25s
-}
-
-#mail.nohavemail:hover:after,
-#mail.havemail:hover:after,
-#chat:not(.active):hover:after,
-#chat.active:hover:after,
-#modmail.nohavemail:hover:after,
-#modmail.havemail:hover:after,
-#new_modmail.nohavemail:hover:after,
-#new_modmail.havemail:hover:after,
-.pref-lang:hover:after,
-#header .gearIcon:hover:after,
-.logout a:hover:after {
-    opacity: 1
-}
-
-.message-count {
-    display: none!important
-}
-
-#mail.nohavemail:before,
-#mail.nohavemail:after,
-#mail.havemail:before,
-#mail.havemail:after {
-    width: 23px
-}
-
-#mail.nohavemail:before {
-    background-position: 0 0
-}
-
-#mail.nohavemail:after {
-    background-position: 0 -17px
-}
-
-#mail.havemail:before {
-    background-position: 0 -33px
-}
-
-#mail.havemail:after {
-    background-position: 0 -50px
-}
-
-#chat:not(.active):before,
-#chat:not(.active):after,
-#chat.active:before,
-#chat.active:after {
-    width: 21px
-}
-
-#chat:not(.active):before {
-    background-position: -25px 0
-}
-
-#chat:not(.active):after {
-    background-position: -25px -17px
-}
-
-#chat.active:before {
-    background-position: -25px -33px
-}
-
-#chat.active:after {
-    background-position: -25px 50px
-}
-
-#modmail.nohavemail:before,
-#modmail.nohavemail:after,
-#modmail.havemail:before,
-#modmail.havemail:after {
-    width: 15px
-}
-
-#modmail.nohavemail:before {
-    background-position: -46px 0
-}
-
-#modmail.nohavemail:after {
-    background-position: -46px -17px
-}
-
-#modmail.havemail:before {
-    background-position: -46px -33px
-}
-
-#modmail.havemail:after {
-    background-position: -46px -50px
-}
-
-#new_modmail.nohavemail:before,
-#new_modmail.nohavemail:after,
-#new_modmail.havemail:before,
-#new_modmail.havemail:after {
-    width: 14px
-}
-
-#new_modmail.nohavemail:before {
-    background-position: -62px 0
-}
-
-#new_modmail.nohavemail:after {
-    background-position: -62px -17px
-}
-
-#new_modmail.havemail:before {
-    background-position: -62px -33px
-}
-
-#new_modmail.havemail:after {
-    background-position: -62px -50px
-}
-
-
-/** START **/
-
-
-/** cyberpunk .lang **/
-
-html:lang(nt) *,
-html:lang(nt) ::before,
-html:lang(nt) ::after {
-    transition: none!important;
-    animation: none!important
-}
-
-.pref-lang:before,
-.pref-lang:after {
-    width: 14px
-}
-
-.pref-lang:before {
-    background-position: -77px 0
-}
-
-.pref-lang:after {
-    background-position: -77px -17px
-}
-
-
-/** END **/
-
-
-/**Mail and Preferences. If you remove up to next quote, it will go back to normal.
+/**Mail and Preferences. If you remove up to next quote, it will go back to normal.**/
 
 #mail.nohavemail:before,
 #mail.nohavemail:after,
@@ -987,13 +453,13 @@ html:lang(nt) ::after {
     position: absolute;
     height: 16px;
     margin: -16px 0 0 0;
-    background: url(%%icon%%) 
-    top left / 92px;
+    background: url(%%icon%%) top left / 92px;
     opacity: 0;
     transition: opacity 0.25s;
 }
 
-End of Mail stuff. Remove to see effects of it not being there.**/
+
+/**End of Mail stuff. Remove to see effects of it not being there.**/
 
 ul.flat-list.buttons a {
     color: #20A4F3;
